Think have solution for Q6

--- a/hw2/260744353.tex
+++ b/hw2/260744353.tex
@@ -113,6 +113,6 @@
 		Choose any root and run Breadth-First Search to find the two longest paths (the two branches with the longest depths) and sum them. Add 1 to the length to include the root itself.
 		
 	\section{}
-		Run BFS.
+		Use a BFS
 	
 \end{document}
